dummy data entered
